// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should be block 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be disabled 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: default;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  opacity: 0.7;
  pointer-events: none;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be fixed size 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  height: 32px;
  width: 32px;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be loading 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: default;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  pointer-events: none;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content,
.c1 .src-button-addon {
  color: transparent;
}

.c1 .src-button-content > *,
.c1 .src-button-addon > * {
  visibility: hidden;
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be under the button container 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should have addon 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
  padding-left: 0.45rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
  border-left: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  border-right: 0;
  border-bottom-left-radius: .125rem;
  border-top-left-radius: .125rem;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: currentcolor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color;
  transition-property: background,border,color;
  background: #0556B2;
  border-color: #0556B2;
  color: #fff;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class=" c2 src-button-addon"
      shape="rectangle"
    >
      Addon
    </div>
    <span
      class="c3 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should have separated addon 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component as link 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  border-color: transparent;
  color: #0665d0;
  fill: #0665d0;
}

.c1:hover .src-button-content {
  color: #0552A9;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component outline 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  border-color: #0665d0;
  color: #0665d0;
}

.c1:hover .src-button-content {
  background: #0665d0;
  color: #fff;
}

.c1:hover .src-button-addon {
  background: #0556B2;
  color: #fff;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component outline with soft colors 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  border-color: #cde0f5;
  color: #cde0f5;
}

.c1:hover .src-button-content {
  background: #cde0f5;
  color: #033c7c;
}

.c1:hover .src-button-addon {
  background: #a7c9ee;
  color: #033c7c;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.225rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #cde0f5;
  border-color: #cde0f5;
  color: #033c7c;
}

.c1:hover .src-button-content {
  background: #b9d3f1;
  border-color: #b9d3f1;
}

.c1:hover .src-button-addon {
  background: #8eb9e9;
  border-color: #8eb9e9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should resize component responsively 1`] = `
<DocumentFragment>
  .c0 .src-button-content {
  font-size: .75rem;
  padding: .28rem .8rem;
}

.c0 .src-button-content > :not(:last-child) {
  margin-right: 0.2rem;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  border-radius: .125rem;
  cursor: pointer;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1:active {
  outline: 0;
}

.c1 .src-button-content {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .src-button-content {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .src-button-content {
  background: #055BBB;
  border-color: #055BBB;
}

.c1:hover .src-button-addon {
  background: #0552A9;
  border-color: #0552A9;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

.c1 .src-button-content {
  border-radius: .125rem;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  word-break: break-word;
  word-wrap: break-word;
}

@media (min-width:768px) {
  .c0 .src-button-content {
    font-size: .875rem;
    padding: .45rem .9rem;
  }

  .c0 .src-button-content > :not(:last-child) {
    margin-right: 0.225rem;
  }
}

@media (min-width:992px) {
  .c0 .src-button-content {
    font-size: 1rem;
    padding: .5rem 1rem;
  }

  .c0 .src-button-content > :not(:last-child) {
    margin-right: 0.25rem;
  }
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 src-button-content"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;
